# count-me

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  foo.txt  test.csv
.github/workflows/: rust.yml
src/: cli.rs  data.rs  lib.rs  main.rs
tests/: ms_envconst_dioxines.dbf  ms_envconst_spadom_jardins_urb.csv  ms_envconst_spadom_jardins_urb.dbf  ms_envconst_spadom_jardins_urb.shp  ms_envconst_spadom_jardins_urb.shx
