[package]
name = "countme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"
gdal = "0.16.0"
gdal-sys = { version = '0.9.1', features = ['bindgen'] }
serde = { version = "1.0.199", features = ["derive"] }
lazy_static = "1.4.0"

